# entity_manager

./: .gitignore  CMakeLists.txt  LICENSCE  README.md  config.conf
cmake/: dependencies.cmake  tests.cmake
include/components/components/: bbox.h  collision.h  input.h  lifespan.h  name.h  score.h  shape.h  transform.h
include/entity/entity/: entity.h  entity_manager.h
include/entity/game/: color.hpp  game.h  game_configs.hpp  score.hpp  window.hpp
include/geometry/geometry/: vec2.h
src/: entity.cpp  entity_manager.cpp  game.cpp  main.cpp  score.cpp  vec2.cpp  window.cpp
tests/entities/: entity_manager.cpp
tests/geometry/: vec2.cpp
